# CppUtils

./: .clang-format  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  meson.build  meson_options.txt  standardese.ini  xmake.lua
ASM/: meson.build
ASM/Compiler/: meson.build
ASM/Lexer/: meson.build
ASM/VM/: meson.build
Chrono/: README.md  meson.build  xmake.lua
Chrono/include/Chrono/: Chronometer.hpp
Chrono/include/CppUtils/Chrono/: Chronometer.hpp  Concept.hpp
Container/: README.md  meson.build  xmake.lua
Container/include/Container/: Container.hpp  MeshNode.hpp
Container/include/CppUtils/Container/: MeshNetwork.hpp  MeshNode.hpp  Point2d.hpp  Point3d.hpp  Sequence.hpp  Size2d.hpp  Size3d.hpp  Stack.hpp  Tree.hpp  VariantTree.hpp  VariantVector.hpp  Vector.hpp  Vector2.hpp  Vector3.hpp
DesignPattern/: meson.build
DesignPattern/include/CppUtils/DesignPattern/: Observer.hpp
FileSystem/: README.md  meson.build  xmake.lua
FileSystem/include/CppUtils/FileSystem/: Directory.hpp  File.hpp  FileWatcher.hpp
FileSystem/include/FileSystem/: File.hpp  FileSystem.hpp
Graph/: README.md  meson.build  xmake.lua
Graph/include/CppUtils/Graph/: MeshNetwork.hpp  MeshNode.hpp  Tree.hpp  TreeNode.hpp  VariantTree.hpp  VariantTreeNode.hpp
Graph/include/Graph/: MeshNode.hpp  TreeNode.hpp
Hash/: README.md  meson.build  xmake.lua
Hash/include/CppUtils/: Hash.hpp  HashTable.hpp
Hash/include/CppUtils/Hash/: Hash.hpp  Token.hpp
Ini/: meson.build
Ini/include/CppUtils/Ini/: IniLexer.hpp
Json/: meson.build
Json/include/CppUtils/Json/: JsonLexer.hpp
Language/: README.md  meson.build  xmake.lua
Language/ASM/: README.md  meson.build  xmake.lua
Language/ASM/Compiler/: meson.build  xmake.lua
Language/ASM/Lexer/: meson.build  xmake.lua
Language/ASM/VM/: meson.build
Language/ASM/VirtualMachine/: meson.build  xmake.lua
Language/Compiler/: README.md  meson.build  xmake.lua
Language/Compiler/IR/: meson.build
Language/IR/: meson.build  xmake.lua
Language/IR/Compiler/: meson.build  xmake.lua
Language/IR/Lexer/: meson.build  xmake.lua
Language/IR/VirtualMachine/: meson.build  xmake.lua
Language/Ini/: meson.build  xmake.lua
Language/Interpreter/: meson.build
Language/Json/: meson.build  xmake.lua
Language/Lexer/: README.md  meson.build  xmake.lua
Language/Lexer/src/: Lexeme.cpp
Language/Markdown/: meson.build  xmake.lua
Language/Note/: meson.build  xmake.lua
Language/Parser/: README.md  meson.build  xmake.lua
Language/Parser/src/: Expression.cpp
Language/StringTree/: meson.build
Language/VM/: README.md  meson.build
Language/VirtualMachine/: README.md  meson.build  xmake.lua
Language/Xml/: meson.build  xmake.lua
Language/include/CppUtils/Language/: Ast.hpp  AstGrammar.hpp  AstGrammar.old.hpp  Grammar.hpp  GrammarLexer.hpp  Lexeme.hpp  Lexer.hpp  LibSystem.hpp  LibSystem.old.hpp  MultiTapeTuringMachine.hpp  ParametersLexer.hpp  Parser.hpp  VirtualMachine.hpp  VirtualMachine.old.hpp
Language/include/Language/: Grammar.hpp  GrammarLexer.hpp  Lexeme.hpp  Lexer.hpp  ParametersLexer.hpp  Parser.hpp  Parsers.hpp  Reader.hpp
Language/src/: Lexeme.cpp
Log/: README.md  meson.build  xmake.lua
Log/include/CppUtils/Log/: ChronoLogger.hpp  Logger.hpp  TreeNodeLogger.hpp
Log/include/Log/: ChronoLogger.hpp  Logger.hpp
Log/src/: Logger.cpp
Logical/: README.md  meson.build
Logical/include/CppUtils/Logical/: LogicGates.hpp
Memory/: meson.build  xmake.lua
Memory/include/CppUtils/Memory/: UniquePtr.hpp
Parameters/: meson.build  xmake.lua
Parameters/include/CppUtils/Parameters/: ParametersLexer.hpp
Platform/: README.md  meson.build  xmake.lua
Platform/include/CppUtils/Platform/: Compiler.hpp  Library.hpp  OS.hpp  Windows.hpp
String/: meson.build  xmake.lua
String/include/CppUtils/String/: Concept.hpp  Hash.hpp  HashTable.hpp  String.hpp
String/include/String/: Parameters.hpp  String.hpp
Switch/: README.md  meson.build
Switch/include/CppUtils/Switch/: Switch.hpp
Switch/include/Switch/: Switch.hpp
Switch/src/: Switch.cpp
System/: meson.build  xmake.lua
System/include/CppUtils/System/: DllExport.hpp  OS.hpp  SharedLibrary.hpp  System.hpp
Terminal/: meson.build  xmake.lua
Terminal/TextModifier/: meson.build
Terminal/include/CppUtils/Terminal/: BackgroundColor.hpp  Terminal.hpp  TextColor.hpp  TextModifier.hpp  TextStyle.hpp
Terminal/include/Terminal/: Parameters.hpp  Terminal.hpp  TextModifier.hpp
Terminal/include/Terminal/TextModifier/: BackgroundColor.hpp  TextColor.hpp  TextStyle.hpp
Terminal/src/: Terminal.cpp  TextModifier.cpp
Test/: README.md  meson.build
Test/include/CppUtils/Test/: Test.hpp  UnitTest.hpp
Test/include/Test/: Test.hpp  UnitTest.hpp
Thread/: README.md  meson.build  xmake.lua
Thread/include/CppUtils/Thread/: AsyncIStreamListener.hpp  LoopThread.hpp
Thread/include/Thread/: AsyncIStreamListener.hpp  LoopThread.hpp  Thread.hpp
Type/: README.md  meson.build  xmake.lua
Type/include/CppUtils/Type/: Cloneable.hpp  Concept.hpp  Concepts.hpp  Named.hpp  NonCopyable.hpp  NonInstantiable.hpp  NonMovable.hpp  Operators.hpp  Token.hpp  Traits.hpp  TypeId.hpp  Typed.hpp  VariadicTemplate.hpp  Variant.hpp
Type/include/Type/: Cloneable.hpp  Index.hpp  Named.hpp  NonCopyable.hpp  NonInstanciable.hpp  Type.hpp  TypeId.hpp  TypeIndex.hpp  Typed.hpp
Type/src/: Token.cpp  TypeId.cpp
UnitTest/: README.md  meson.build  xmake.lua
UnitTest/include/CppUtils/UnitTest/: Test.hpp  TestException.hpp  TestRunner.hpp  TestSettings.hpp  TestSettingsLexer.hpp  (+1 more)
UnitTests/: main.cpp  meson.build  xmake.lua
UnitTests/Container/: MeshNode.mpp  Stack.mpp  Vector.mpp
UnitTests/FileSystem/: FileWatcher.mpp
UnitTests/Language/: HighLevelLabelsCompiler.mpp  LowLevelLabelsCompiler.mpp  VirtualMachine.mpp
UnitTests/UnitTest/: UnitTest.mpp
UnitTests/src/: main.cpp
resources/: README.txt  meson.build
resources/documentation/: meson.build  standardese.ini
resources/documentation-old/: meson.build  mkdocs.yml  standardese.ini
resources/native-files/: macos-llvm13-clang.ini.sample
(+643 files in other folders)
