public_dependencies = []
private_dependencies = []

includeDir = include_directories(['include/', '.'])

sources = files([

])

headers = files([
	'include/Container/MeshNode.hpp',
	'include/Container/Vector.hpp'
])

container_dep = declare_dependency(
	include_directories: includeDir,
	dependencies: public_dependencies
)
