public_dependencies = []
private_dependencies = []

includeDir = include_directories(['include/', '.'])

sources = files([

])

headers = files([
	'include/CppUtils/FileSystem/File.hpp'
])

cppUtils_fileSystem_dep = declare_dependency(
	include_directories: includeDir,
	dependencies: public_dependencies
)
