public_dependencies = [
	log_dep
]
private_dependencies = []

includeDir = include_directories(['include/', '.'])

sources = files([

])

headers = files([
	'include/Graph/MeshNode.hpp',
	'include/Graph/TreeNode.hpp'
])

graph_dep = declare_dependency(
	include_directories: includeDir,
	dependencies: public_dependencies
)
