public_dependencies = [
	cppUtils_language_lexer_dep
]
private_dependencies = []

includeDir = include_directories(['include/', '.'])

sources = files([

])

headers = files([
	'include/CppUtils/Ini/IniLexer.hpp'
])

cppUtils_ini_dep = declare_dependency(
	include_directories: includeDir,
	dependencies: public_dependencies
)
