public_dependencies = [
	cppUtils_type_dep
]
private_dependencies = []

includeDir = include_directories(['include/', '.'])

sources = files([

])

headers = files([
	'include/CppUtils/Logical/LogicGates.hpp'
])

cppUtils_logical_dep = declare_dependency(
	include_directories: includeDir,
	dependencies: public_dependencies
)
