public_dependencies = [
	cppUtils_language_parser_dep,
	cppUtils_language_lexer_dep
]
private_dependencies = []

includeDir = include_directories(['include/', '.'])

sources = files([

])

headers = files([
	'include/CppUtils/Parameters/ParametersLexer.hpp'
])

cppUtils_parameters_dep = declare_dependency(
	include_directories: includeDir,
	dependencies: public_dependencies
)
