public_dependencies = []
private_dependencies = []

includeDir = include_directories(['include/', '.'])

sources = files([

])

headers = files([
	'include/CppUtils/String/String.hpp'
])

cppUtils_string_dep = declare_dependency(
	include_directories: includeDir,
	dependencies: public_dependencies
)
