public_dependencies = [
	cppUtils_platform_dep
]
private_dependencies = []

includeDir = include_directories(['include/', '.'])

sources = files([
	
])

headers = files([
	'include/CppUtils/System/System.hpp'
])

cppUtils_system_dep = declare_dependency(
	include_directories: includeDir,
	dependencies: public_dependencies
)
