subdir('TextModifier')

public_dependencies = [
	cppUtils_terminal_textModifier_dep
]
private_dependencies = []

includeDir = include_directories(['include/', '.'])

sources = files([
	
])

headers = files([
	'include/CppUtils/Terminal/Terminal.hpp'
])

cppUtils_terminal_dep = declare_dependency(
	include_directories: includeDir,
	dependencies: public_dependencies
)
