public_dependencies = [
	cppUtils_parameters_dep
]
private_dependencies = []

includeDir = include_directories(['include/', '.'])

sources = files([
	
])

headers = files([
	'include/CppUtils/Test/Test.hpp'
])

cppUtils_test_dep = declare_dependency(
	include_directories: includeDir,
	dependencies: public_dependencies
)
