public_dependencies = []
private_dependencies = []

includeDir = include_directories(['include/', '.'])

sources = files([
	
])

headers = files([
	'include/CppUtils/Thread/AsyncIStreamListener.hpp',
	'include/CppUtils/Thread/LoopThread.hpp'
])

cppUtils_thread_dep = declare_dependency(
	include_directories: includeDir,
	dependencies: public_dependencies
)
