public_dependencies = [
	cppUtils_language_lexer_dep
]
private_dependencies = []

includeDir = include_directories(['include/', '.'])

sources = files([

])

headers = files([
	'include/CppUtils/ASM/Lexer/Lexer.hpp'
])

cppUtils_asm_lexer_dep = declare_dependency(
	include_directories: includeDir,
	dependencies: public_dependencies
)
